@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#7387] Add New Category button to Element tree toolbar
 - [#7518] Fix issue that prevented absolute URLs in media-source bound TVs
 - [#7521] Allow filtering of usergroup by request on users page
 - Add assets_path field to modNamespace
